--- a/knights-football/index.html
+++ b/knights-football/index.html
@@ -14,7 +14,7 @@
         <header>
             <nav>
                 <a class="logo_link" href="index.html">
-                    <img class="logo" src="images/kneeling_knight_crop.png" alt="knight Logo" />
+                    <img class="logo" src="./images/kneeling_knight_crop.png" alt="knight Logo" />
                 </a>
                 <div class="title">
                     <h4>Trivium Prep Football</h4>
@@ -27,7 +27,7 @@
             </nav>
         </header>
 
-        <main>
+        <main id="home">
             <section class="hero">
                 <div class="hero-box">
                     <img class="hero-img" src="./images/knights_field_game_rsz.jpg" alt="knights game field" />
@@ -68,18 +68,21 @@
                     </p>
                 </div>
                 <div class="box2">
-                    <blockquote>
-                        <p>
-                            Football is like life. It requires perseverance, self-denial, hard work, sacrifice, dedication, and respect for authority.
-                        </p>
-                        <cite>Vince Lombardi</cite>
-                    </blockquote>
+                    <div class="border">
+                        <blockquote>
+                            <p>
+                                Football is like life. It requires perseverance, self-denial, hard work, sacrifice, dedication, and respect for authority.
+                            </p>
+                            <cite>Vince Lombardi</cite>
+                        </blockquote>
+                    </div>
+                    
                 </div>
             </section>
             <section class="sportsmanship">
-                <div class="content-box">
+                <img class="sportsmanship-img" src="./images/roster/triv-171_rsz.jpeg" alt="sportsmanship" />
+                <div class="content-area">
                     <h2>Good Sportsmanship Reminder</h2>
-                    <img class="sportsmanship-img" src="./images/roster/triv-171_rsz.jpeg" alt="sportsmanship" />
                     <p>
                         As member school of the Arizona Interscholastic Association, we would like to remind you the objectives of educational based
                         athletics are what set this event apart from all other levels of competition. We strive to promote good sportsmanship by
@@ -90,16 +93,16 @@
             </section>
             <div class="photo-area">
                 <div class="content-box">
-                    <img class="" src="./images/photos/TRIV-001.jpg" alt="">
-                    <img class="" src="./images/photos/TRIV-083.jpg" alt="">
-                    <img class="" src="./images/photos/TRIV-108.jpg" alt="">
+                    <img class="" src="./images/photos/TRIV-001.jpg" alt="" />
+                    <img class="" src="./images/photos/TRIV-083.jpg" alt="" />
+                    <img class="" src="./images/photos/TRIV-108.jpg" alt="" />
                 </div>
             </div>
         </main>
 
         <footer>
             <a class="logo_link" href="index.html">
-                <img class="logo" src="images/kneeling_knight_crop.png" alt="knight Logo" />
+                <img class="logo" src="./images/kneeling_knight_crop.png" alt="knight Logo" />
             </a>
             <div>Copyright &copy; 2023 - Vern Wolfley</div>
 
@@ -113,13 +116,13 @@
 
             <div class="social">
                 <a href="https://www.linkedin.com/in/vern-wolfley-b8322813/" target="_blank">
-                    <img src="images/social/linkedin-logo.png" alt="instagram icon" />
+                    <img src="./images/social/linkedin-logo.png" alt="instagram icon" />
                 </a>
                 <a href="https://twitter.com/WolfleyVern" target="_blank">
-                    <img src="images/social/twitter-x-logo.png" alt="twitter icon" />
+                    <img src="./images/social/twitter-x-logo.png" alt="twitter icon" />
                 </a>
                 <a href="https://www.facebook.com/vwolfley" target="_blank">
-                    <img src="images/social/facebook-logo.png" alt="fb icon" />
+                    <img src="./images/social/facebook-logo.png" alt="fb icon" />
                 </a>
             </div>
         </footer>
