--- a/knights-football/pages/roster.html
+++ b/knights-football/pages/roster.html
@@ -13,26 +13,162 @@
     <body>
         <header>
             <nav>
-                <a id="logo_link" href="index.html">
+                <a class="logo_link" href="../index.html">
                     <img class="logo" src="../images/kneeling_knight_crop.png" alt="knight Logo" width="125px" />
                 </a>
-                <div class="heading">
+                <div class="title">
                     <h4>Trivium Prep Football</h4>
                 </div>
                 <ul class="nav-links">
-                    <li><a  href="../index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a class="active" href="./roster.html">Roster</a></li>
                     <li><a href="./schedule.html">Schedule</a></li>
                 </ul>
             </nav>
         </header>
 
-        <main>
-            <h1>This is Roster Page!</h1>
+        <main id="roster">
+            <section class="hero">
+                <div class="hero-box">
+                    <img class="hero-img" src="../images/roster/roster_line_rsz.jpeg" alt="knights lined up" />
+                </div>
+                <div class="hero-msg">
+                    <h1>Crimson Knights Football Roster</h1>
+                    <h2>Passion - Dedication - Spirit</h2>
+                </div>
+            </section>
+
+            <section class="roster-area">
+                <div class="definitions">
+                    <h3>Definitions of Player Positions</h3>
+                    <h4>Offensive Positions</h4>
+                    <ul>
+                        <li>QB: Quarterback</li>
+                        <li>RB: Running Back</li>
+                        <li>TE: Tight End</li>
+                        <li>WR: Wide Receiver</li>
+                        <li>HB: Halfback</li>
+                        <li>FB: Fullback</li>
+                        <li>OL: Offensive Line</li>
+                        <li>C: Center</li>
+                        <li>OG: Offensive Guard</li>
+                        <li>OT: Offensive Tackle</li>
+                    </ul>
+                    <h4>Defensive Positions</h4>
+                    <ul>
+                        <li>DL: Defensive Line</li>
+                        <li>DT: Defensive Tackle</li>
+                        <li>DE: Defensive End</li>
+                        <li>MLB: Middle Linebacker</li>
+                        <li>OLB: Outside Linebacker</li>
+                        <li>CB: Cornerback</li>
+                        <li>S: Safety</li>
+                    </ul>
+                    <h4>Special Teams</h4>
+                    <ul>
+                        <li>K: Kicker</li>
+                        <li>P: Punter</li>
+                        <li>H: Holder</li>
+                        <li>LS: Long Snapper</li>
+                        <li>PR: Punt Returner</li>
+                        <li>KR: Kick Returner</li>
+                        <li>ATH: Athlete</li>
+                    </ul>
+                </div>
+                <div class="player-list">
+                    <h3>Your Crimson Knights</h3>
+                    <div class="player">
+                        <div class="number">2</div>
+                        <div class="stats">
+                            <div class="name">Matthew Lee</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">WR, LB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">10</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">5'11"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">170 lbs</div>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="number">4</div>
+                        <div class="stats">
+                            <div class="name">Vern Wolfley IV</div>
+                            <div class="position-head">Position</div>
+                            <div class="position">QB, DB</div>
+                            <div class="year-head">Year</div>
+                            <div class="year">11</div>
+                            <div class="height-head">Height</div>
+                            <div class="height">6'0"</div>
+                            <div class="weight-head">Weight</div>
+                            <div class="weight">185 lbs</div>
+                        </div>
+                        </div>
+                        <div class="player">
+                            <div class="number">5</div>
+                            <div class="stats">
+                                <div class="name">Koston Belfield</div>
+                                <div class="position-head">Position</div>
+                                <div class="position">WR, DB</div>
+                                <div class="year-head">Year</div>
+                                <div class="year">11</div>
+                                <div class="height-head">Height</div>
+                                <div class="height">6'0"</div>
+                                <div class="weight-head">Weight</div>
+                                <div class="weight">160 lbs</div>
+                            </div>
+                        </div>
+                        <div class="player">
+                            <div class="number">7</div>
+                            <div class="stats">
+                                <div class="name">Noah Messieha</div>
+                                <div class="position-head">Position</div>
+                                <div class="position">WR, K, DB</div>
+                                <div class="year-head">Year</div>
+                                <div class="year">11</div>
+                                <div class="height-head">Height</div>
+                                <div class="height">5'10"</div>
+                                <div class="weight-head">Weight</div>
+                                <div class="weight">140 lbs</div>
+                            </div>
+                        </div>
+
+
+
+
+
+                    
+                </div>
+            </section>
+
+            <section class="coaching-area">
+                <div class="coach-list"></div>
+                <div class="pic-area"></div>
+            </section>
+
+            <div class="photo-area">
+                <div class="content-box">
+                    <img class="" src="../images/photos/TRIV-001.jpg" alt="" />
+                    <img class="" src="../images/photos/TRIV-083.jpg" alt="" />
+                    <img class="" src="../images/photos/TRIV-108.jpg" alt="" />
+                </div>
+            </div>
         </main>
 
         <footer>
-            <p>wdd-130-a1 &copy; 2023 - Vern Wolfley</p>
+            <a class="logo_link" href="../index.html">
+                <img class="logo" src="../images/kneeling_knight_crop.png" alt="knight Logo" />
+            </a>
+            <div>Copyright &copy; 2023 - Vern Wolfley</div>
+
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a class="active" href="./roster.html">Roster</a></li>
+                    <li><a href="./schedule.html">Schedule</a></li>
+                </ul>
+            </nav>
 
             <div class="social">
                 <a href="https://www.linkedin.com/in/vern-wolfley-b8322813/" target="_blank">
