--- a/knights-football/pages/schedule.html
+++ b/knights-football/pages/schedule.html
@@ -13,10 +13,10 @@
     <body>
         <header>
             <nav>
-                <a id="logo_link" href="../index.html">
+                <a class="logo_link" href="../index.html">
                     <img class="logo" src="../images/kneeling_knight_crop.png" alt="knight Logo" width="125px" />
                 </a>
-                <div class="heading">
+                <div class="title">
                     <h4>Trivium Prep Football</h4>
                 </div>
                 <ul class="nav-links">
@@ -32,7 +32,18 @@
         </main>
 
         <footer>
-            <p>wdd-130-a1 &copy; 2023 - Vern Wolfley</p>
+            <a class="logo_link" href="../index.html">
+                <img class="logo" src="../images/kneeling_knight_crop.png" alt="knight Logo" />
+            </a>
+            <div>Copyright &copy; 2023 - Vern Wolfley</div>
+
+            <nav>
+                <ul class="nav-links">
+                    <li><a  href="../index.html">Home</a></li>
+                    <li><a href="./roster.html">Roster</a></li>
+                    <li><a class="active" href="./schedule.html">Schedule</a></li>
+                </ul>
+            </nav>
 
             <div class="social">
                 <a href="https://www.linkedin.com/in/vern-wolfley-b8322813/" target="_blank">
