--- a/knights-football/pages/roster.html
+++ b/knights-football/pages/roster.html
@@ -133,6 +133,48 @@
                                 <div class="weight">140 lbs</div>
                             </div>
                         </div>
+                        <div class="player">
+                            <div class="number">8</div>
+                            <div class="stats">
+                                <div class="name">Zachary Eckart</div>
+                                <div class="position-head">Position</div>
+                                <div class="position">TE, LB</div>
+                                <div class="year-head">Year</div>
+                                <div class="year">11</div>
+                                <div class="height-head">Height</div>
+                                <div class="height">5'11"</div>
+                                <div class="weight-head">Weight</div>
+                                <div class="weight">176 lbs</div>
+                            </div>
+                        </div>
+                        <div class="player">
+                            <div class="number">10</div>
+                            <div class="stats">
+                                <div class="name">Kenyon Bonton</div>
+                                <div class="position-head">Position</div>
+                                <div class="position">WR, DB</div>
+                                <div class="year-head">Year</div>
+                                <div class="year">9</div>
+                                <div class="height-head">Height</div>
+                                <div class="height">5'7"</div>
+                                <div class="weight-head">Weight</div>
+                                <div class="weight">110 lbs</div>
+                            </div>
+                        </div>
+                        <div class="player">
+                            <div class="number">11</div>
+                            <div class="stats">
+                                <div class="name">Cruz Ramirez</div>
+                                <div class="position-head">Position</div>
+                                <div class="position">WR, DB</div>
+                                <div class="year-head">Year</div>
+                                <div class="year">10</div>
+                                <div class="height-head">Height</div>
+                                <div class="height">5'7"</div>
+                                <div class="weight-head">Weight</div>
+                                <div class="weight">160 lbs</div>
+                            </div>
+                        </div>
 
 
 
