--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <header>
             <h1>Welcome to WDD130 Web Projects</h1>
             <nav>
-                <a href="aboutme/index.html" target="_blank">About Me Page</a>
-                <a href="wwr/index.html" target="_blank">White Water Rafting Website</a>
-                <a href="wwr/site-plan-rafting.html" target="_blank">White Water Rafting Siteplan</a>
-                <a href="positioning/positioning.html" target="_blank">Positioning Activity</a>
-                <a href="knights-football/index.html" target="_blank">Personal Website</a>
-                <a href="knights-football/pages/site-plan.html" target="_blank">Personal Siteplan</a>
+                <a href="./aboutme/index.html" target="_blank">About Me Page</a>
+                <a href="./wwr/index.html" target="_blank">White Water Rafting Website</a>
+                <a href="./wwr/site-plan-rafting.html" target="_blank">White Water Rafting Siteplan</a>
+                <a href="./positioning/positioning.html" target="_blank">Positioning Activity</a>
+                <a href="./knights-football/index.html" target="_blank">Personal Website</a>
+                <a href="./knights-football/pages/site-plan.html" target="_blank">Personal Siteplan</a>
             </nav>
         </header>
 
