--- a/knights-football/pages/site-plan.html
+++ b/knights-football/pages/site-plan.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Personal Site Plan</title>
-        <link type="text/css" rel="stylesheet" href="styles/site-plan.css" />
+        <link type="text/css" rel="stylesheet" href="../styles/site-plan.css" />
     </head>
 
     <body>
