--- a/knights-football/pages/site-plan.html
+++ b/knights-football/pages/site-plan.html
@@ -43,7 +43,7 @@
             <h2>Branding</h2>
             <h3>Website Logo</h3>
             <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-            <img src="./images/triviumcrimsonknights_knightntype_rsz.png" alt="kneeling knight" height="500" />
+            <img src="../images/triviumcrimsonknights_knightntype_rsz.png" alt="kneeling knight" height="500" />
             <hr />
             <h2>Style Guide</h2>
 
@@ -164,8 +164,8 @@
 
             <p>Images for the Home page</p>
             <ul>
-                <img src="./images/knights_field_game_rsz.jpg" alt="image for homepage" height="350" />
-                <img src="./images/roster/triv-169_rsz.jpg" alt="image for homepage" height="350" />
+                <img src="../images/knights_field_game_rsz.jpg" alt="image for homepage" height="350" />
+                <img src="../images/roster/triv-169_rsz.jpg" alt="image for homepage" height="350" />
             </ul>
             <h3>Roster</h3>
             <p>
@@ -205,8 +205,8 @@
 
             <p>Images for the Page 2 - Roster</p>
             <ul>
-                <img src="./images/roster/roster_line_rsz.jpeg" alt="image for page" height="350" />
-                <img src="./images/roster/hs_football_2023_rsz.jpeg" alt="image for page" height="350" />
+                <img src="../images/roster/roster_line_rsz.jpeg" alt="image for page" height="350" />
+                <img src="../images/roster/hs_football_2023_rsz.jpeg" alt="image for page" height="350" />
             </ul>
             <h3>Schedule</h3>
             <p></p>
@@ -239,23 +239,23 @@
             </ul>
             <p>Images for the Page 3 - Schedule</p>
             <ul>
-                <img src="./images/roster/triv-171_rsz.jpeg" alt="image for page3" height="350" />
-                <img src="./images/roster/team_shot.jpg" alt="image for page3" height="350" />
+                <img src="../images/roster/triv-171_rsz.jpeg" alt="image for page3" height="350" />
+                <img src="../images/roster/team_shot.jpg" alt="image for page3" height="350" />
             </ul>
             <hr />
             <h2>Wireframes</h2>
             <p>Create three wireframes for your site. One for each page and list them here</p>
 
             <h3>Home</h3>
-            <img src="./images/screen_shots/home_screenshot_tiny.png" alt="home page wireframe" width="350"/>
+            <img src="../images/screen_shots/home_screenshot_tiny.png" alt="home page wireframe" width="350"/>
             <a href="https://wireframe.cc/xf2N7j">Home wireframe link</a>
 
             <h3>Roster</h3>
-            <img src="./images/screen_shots/roster_screenshot_tiny.png" alt="roster wireframe" width="350" />
+            <img src="../images/screen_shots/roster_screenshot_tiny.png" alt="roster wireframe" width="350" />
             <a href="https://wireframe.cc/TWUvu4">Roster wireframe link</a>
 
             <h3>Schedule</h3>
-            <img src="./images/screen_shots/schedule_screenshot_tiny.png" alt="schedule wireframe" width="350"/>
+            <img src="../images/screen_shots/schedule_screenshot_tiny.png" alt="schedule wireframe" width="350"/>
             <a href="https://wireframe.cc/eagw3a">Schedule wireframe link</a>
         </main>
     </body>
