update schedule page

--- a/knights-football/pages/roster.html
+++ b/knights-football/pages/roster.html
@@ -79,7 +79,7 @@
                     <h3>Your Crimson Knights</h3>
                     <div class="player">
                         <div class="number">2</div>
-                        <div class="stats">
+                        <div class="player-stats">
                             <div class="name">Matthew Lee</div>
                             <div class="position-head">Position</div>
                             <div class="position">WR, LB</div>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="player">
                         <div class="number">4</div>
-                        <div class="stats">
+                        <div class="player-stats">
                             <div class="name">Vern Wolfley IV</div>
                             <div class="position-head">Position</div>
                             <div class="position">QB, DB</div>
@@ -107,7 +107,7 @@
                         </div>
                         <div class="player">
                             <div class="number">5</div>
-                            <div class="stats">
+                            <div class="player-stats">
                                 <div class="name">Koston Belfield</div>
                                 <div class="position-head">Position</div>
                                 <div class="position">WR, DB</div>
@@ -121,7 +121,7 @@
                         </div>
                         <div class="player">
                             <div class="number">7</div>
-                            <div class="stats">
+                            <div class="player-stats">
                                 <div class="name">Noah Messieha</div>
                                 <div class="position-head">Position</div>
                                 <div class="position">WR, K, DB</div>
@@ -135,7 +135,7 @@
                         </div>
                         <div class="player">
                             <div class="number">8</div>
-                            <div class="stats">
+                            <div class="player-stats">
                                 <div class="name">Zachary Eckart</div>
                                 <div class="position-head">Position</div>
                                 <div class="position">TE, LB</div>
@@ -149,7 +149,7 @@
                         </div>
                         <div class="player">
                             <div class="number">10</div>
-                            <div class="stats">
+                            <div class="player-stats">
                                 <div class="name">Kenyon Bonton</div>
                                 <div class="position-head">Position</div>
                                 <div class="position">WR, DB</div>
@@ -163,7 +163,7 @@
                         </div>
                         <div class="player">
                             <div class="number">11</div>
-                            <div class="stats">
+                            <div class="player-stats">
                                 <div class="name">Cruz Ramirez</div>
                                 <div class="position-head">Position</div>
                                 <div class="position">WR, DB</div>
