--- a/knights-football/pages/schedule.html
+++ b/knights-football/pages/schedule.html
@@ -20,15 +20,71 @@
                     <h4>Trivium Prep Football</h4>
                 </div>
                 <ul class="nav-links">
-                    <li><a  href="../index.html">Home</a></li>
-                    <li><a  href="./roster.html">Roster</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="./roster.html">Roster</a></li>
                     <li><a class="active" href="./schedule.html">Schedule</a></li>
                 </ul>
             </nav>
         </header>
 
-        <main>
-            <h1>This is Schedule Page!</h1>
+        <main id="schedule">
+            <section class="hero">
+                <div class="hero-box">
+                    <img class="hero-img" src="../images/schedule/team_shot.jpg" alt="knights lined up" />
+                </div>
+                <div class="hero-msg">
+                    <h1>Crimson Knights Football Schedule</h1>
+                    <h2>Passion - Dedication - Spirit</h2>
+                </div>
+            </section>
+
+            <section class="info-section">
+                <h2>Trivium Prep Crimson Knights Varsity Boys Football</h2>
+                <h4>Goodyear, AZ Conference - 2A Region - Gila</h4>
+            </section>
+
+            <section class="team-stats">
+                <div class="stats-box">
+                    <div>Overall</div>
+                    <h3>3-7</h3>
+                </div>
+                <div class="stats-box">
+                    <div>PCT</div>
+                    <h3>0.300</h3>
+                </div>
+                <div class="stats-box">
+                    <div>Conference</div>
+                    <h3>3-6</h3>
+                </div>
+                <div class="stats-box">
+                    <div>PCT</div>
+                    <h3>0.333</h3>
+                </div>
+                <div class="stats-box">
+                    <div>Region</div>
+                    <h3>3-3</h3>
+                </div>
+                <div class="stats-box">
+                    <div>PCT</div>
+                    <h3>0.500</h3>
+                </div>
+                <div class="stats-box">
+                    <div>Home</div>
+                    <h3>1-4</h3>
+                </div>
+                <div class="stats-box">
+                    <div>Away</div>
+                    <h3>2-3</h3>
+                </div>
+            </section>
+
+            <div class="photo-area">
+                <div class="content-box">
+                    <img class="" src="../images/photos/TRIV-001.jpg" alt="" />
+                    <img class="" src="../images/photos/TRIV-083.jpg" alt="" />
+                    <img class="" src="../images/photos/TRIV-108.jpg" alt="" />
+                </div>
+            </div>
         </main>
 
         <footer>
@@ -39,7 +95,7 @@
 
             <nav>
                 <ul class="nav-links">
-                    <li><a  href="../index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="./roster.html">Roster</a></li>
                     <li><a class="active" href="./schedule.html">Schedule</a></li>
                 </ul>
