--- a/knights-football/pages/schedule.html
+++ b/knights-football/pages/schedule.html
@@ -78,6 +78,86 @@
                 </div>
             </section>
 
+            <section class="schedule-area">
+                <h3>Trivium Prep Football Schedule</h3>
+                <div class="game">
+                    <div class="game-stats">
+                        <div class="game-time">
+                            <div>Fri., Aug. 25</div>
+                            <div>7:00pm</div>
+                        </div>
+                        <div class="opponent">
+                            <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
+                            <div>at</div>
+                            <img src="../images/logos/santa-cruz-valley-dust-devil.png" alt="dust devil" />
+                        </div>
+                        <div>
+                            <h5 class="name">Santa Cruz Valley Union High School</h5>
+                            <div class="mascot">Dust Devils</div>
+                        </div>
+                        <div>
+                            <div>Football Stadium</div>
+                            <div>900 N Main St, Eloy, AZ 85131</div>
+                        </div>
+                        <div class="score-box">
+                            <div class="wl">L</div>
+                            <div class="score">12-16</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="game">
+                    <div class="game-stats">
+                        <div class="game-time">
+                            <div>Fri., Sept. 1</div>
+                            <div>7:00pm</div>
+                        </div>
+                        <div class="opponent">
+                            <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
+                            <div>at</div>
+                            <img src="../images/logos/olympian-eagles.png" alt="bald eagles" />
+                        </div>
+                        <div>
+                            <h5 class="name">Olympian High School (CA)</h5>
+                            <div class="mascot">Bald Eagle</div>
+                        </div>
+                        <div>
+                            <div>Football Stadium</div>
+                            <div>1925 Magdalena Ave, Chula Vista, CA 91913</div>
+                        </div>
+                        <div class="score-box">
+                            <div class="wl">L</div>
+                            <div class="score">19-49</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="game">
+                    <div class="game-stats">
+                        <div class="game-time">
+                            <div>Fri., Sept. 8</div>
+                            <div>7:00pm</div>
+                        </div>
+                        <div class="opponent">
+                            <img src="../images/logos/trivium-preparatory-academy-crimson-knights.png" alt="crimson knight" />
+                            <div>vs.</div>
+                            <img src="../images/logos/scottsdale-prep-spartans.png" alt="spartans" />
+                        </div>
+                        <div>
+                            <h5 class="name">Scottsdale Preparatory Academy</h5>
+                            <div class="mascot">Spartans</div>
+                        </div>
+                        <div>
+                            <div>Football Stadium</div>
+                            <div>2001 N Bullard Ave, Goodyear, AZ 85395</div>
+                        </div>
+                        <div class="score-box">
+                            <div class="wl">L</div>
+                            <div class="score">28-37</div>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+
             <div class="photo-area">
                 <div class="content-box">
                     <img class="" src="../images/photos/TRIV-001.jpg" alt="" />
